<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#886495ed"
    android:orientation="vertical"
    android:padding="2dp"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff00"
        android:layout_marginTop="1dp"
        android:text = "@string/ACME_Corp_Caption"
        />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:text="@string/button_ok"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ok"
        android:layout_alignTop="@+id/ok"
        android:onClick="BackButtonClicked"
        android:text="@string/button_back"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/back"
        android:layout_alignTop="@+id/back"
        android:text="@string/button_login"/>

</RelativeLayout>