<?xml version="1.0" encoding="utf-8"?>
<!--하트 스크롤 -->
<ScrollView
    android:id='@+id/myScrollView1'
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- match_parent 는 부모의 크기에 맞춰 뷰의 크기 수정.
     id 는 java 파일에서 사용-->
    <LinearLayout
        android:id="@+id/LinearLayoutID"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            app:title="toolbar"
            app:titleTextColor="@color/white"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="#ffffff00"
            android:text="@string/hello"
            android:textColor="#ffff0000" />


        <Button
            android:id="@+id/startButton1"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:drawableLeft="@drawable/ic_launcher_foreground"
            android:onClick="startButtonClicked"
            android:text="@string/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:text="@string/button2"
            android:gravity="left|center_vertical"/>

        <Button
            android:id="@+id/startButton2"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:onClick="CheckButtonClicked"
            android:text="@string/button3" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <fragment
                android:id="@+id/mainFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.example.classexercise2.MainFragment" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <fragment
                android:name="com.example.classexercise2.Fragment1"
                android:id="@+id/fragment1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <fragment
                android:name="com.example.classexercise2.Fragment2"
                android:id="@+id/fragment2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:onClick="CheckButton4Clicked"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:onClick="CheckButton5Clicked"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:onClick="CheckButton6Clicked"
            android:text="@string/button5" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:src="@drawable/ic_launcher_foreground" />


        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="866dp"
            android:layout_weight="1"
            android:src="@drawable/dog" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:background="#ffffff00"
            android:text="@string/app_name"
            android:textColor="#ffff0000" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:background="#319A1F"
            android:text="text2" />



    </LinearLayout>
</ScrollView>